5.kubernete/ingress/basic/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx 
  #labels:
  #  app.kubernetes.io/name: myingress
spec:
  ingressClassName: "nginx"
  rules:
  - host: nginx-k8s.anajak-khmer.site 
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-svc 
            port: 
              number: 80
